testsuite/escript/errors/errors005-missing-open-paren.err1
Error detected in program body.
